Went through the whole thing on Xubuntu to verify